Update to Minecraft 1.21.11 but without any patches